[package]
name = "packall"
description = "Packall is a command that eats all the files you feed and keeps them organized, first in the belly, after in the body, for future searches."
repository = "https://github.com/emuvi/packall"
authors = ["Éverton M. Vieira <everton.muvi@gmail.com>"]
license = "LGPL-3.0-only"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33"
serde_json = "1.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
sha2 = "0.9"
rand = "0.8"
unicase = "2.6"
