[package]
name = "packall"
description = "Packall is a command program that eats all the files you feed and keeps them organized, first in the belly, then in the body (indexed), for future searches."
repository = "https://github.com/emuvi/packall"
authors = ["Éverton M. Vieira <everton.muvi@gmail.com>"]
license = "LGPL-3.0-only"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "3", features = ["cargo"] }
serde_json = "1.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
sha2 = "0.10"
rand = "0.8"
unicase = "2.6"
